# robotics-project

./: pyproject.toml  requirements.txt
robotics-project/: README.md
robotics-project/docs/: architecture.md
robotics-project/scripts/: run_example.py  run_simulation_demo.py
robotics-project/src/robotics_project/: config.py
robotics-project/src/robotics_project/control/: __init__.py
robotics-project/src/robotics_project/kinematics/: diff_drive.py
robotics-project/src/robotics_project/simulation/: __init__.py
robotics-project/tests/: test_pid.py
src/robotics_project/control/: pid.py
src/robotics_project/kinematics/: __init__.py
src/robotics_project/simulation/: pybullet_unicycle.py
tests/: test_diff_drive.py
